# python-card-models

./: CardDeck.py  README.md  setup.cfg  testCardDeck.py
src/PythonCardModels/: CardDeck.py
