[metadata]
name = python-card-models
version = 0.0.1
author = Rohit Singh
author_email = rkochhar@uwaterloo.ca
description = Python classes to simulate decks of playing cards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohitkochhar/python-card-models
project_urls = 
	Bug Tracker = https://github.com/rohitkochhar/python-card-models/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[option.packages.find]
where = src
